# orbok

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: bootstrap.rs  download.rs  history.rs  lib.rs  main.rs  model_flow.rs  runtime_context.rs  runtime_isolation_tests.rs  settings.rs
crates/app/src/runtime_context/: tests.rs
crates/bench/: Cargo.toml
crates/bench/src/: bench_main.rs  lib.rs  metrics.rs  report.rs
crates/core/: Cargo.toml
crates/core/src/: history.rs  lib.rs  privacy.rs  status.rs  tests.rs
crates/data/cache/: Cargo.toml
crates/data/db/: Cargo.toml
crates/data/db/migrations/: 0004_search_history.sql  0005_keyword_rowid_indexes.sql  0006_managed_model_generations.sql
crates/data/db/src/: migrations.rs  repo.rs  tests.rs
crates/data/db/src/repo/: cleanup.rs  managed_generations.rs  models.rs  search_history.rs
crates/data/db/src/tests/: rfc042_history.rs  rfc050_generations.rs
crates/data/fs/: Cargo.toml
crates/pipeline/extract/: Cargo.toml
crates/pipeline/extract/src/: plugin.rs  tests.rs  types.rs
crates/pipeline/extract/src/tests/: rfc044_limits.rs
crates/pipeline/workers/: Cargo.toml
crates/pipeline/workers/src/: embedding.rs  lib.rs  model_delivery.rs  model_durability.rs  model_lifecycle.rs  model_verifier.rs  recovery.rs
crates/pipeline/workers/src/model_durability/: tests.rs
crates/pipeline/workers/src/scheduler/: job.rs
crates/pipeline/workers/src/tests/: embedding_hybrid.rs  v07_features.rs
crates/search/embed/: Cargo.toml
crates/search/embed/src/: lib.rs  tract_backend.rs
crates/search/engine/: Cargo.toml
crates/search/engine/src/: filter.rs  fts5.rs  hybrid.rs  lib.rs  multilingual.rs  query.rs  result_trust.rs  snippet.rs  tests.rs
crates/search/engine/src/tests/: rfc007_keyword.rs  rfc041_filter.rs  rfc042_history_conversion.rs
crates/search/models/: Cargo.toml
crates/search/models/src/: download_plan.rs  generation.rs  lib.rs  model_store.rs  readiness.rs  rfc043_tests.rs  trust.rs
crates/search/models/src/rfc043_tests/: rfc043_download_plan.rs  rfc043_readiness.rs
crates/ui/: Cargo.toml
crates/ui/src/: components.rs  i18n.rs  lib.rs  notice.rs  state.rs  tests.rs  views.rs
crates/ui/src/i18n/: en.rs  ja.rs
crates/ui/src/state/: model_consent.rs  search.rs
crates/ui/src/tests/: i18n.rs  rfc041_search_state.rs  rfc042_history.rs  rfc045_location.rs  smoke_views.rs  state.rs
crates/ui/src/views/: wizard.rs
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/maintainers/: accessibility.md  architecture.md  benchmark_report.md  dep_audit.md  release_readiness.md  testing.md  v1_0_readiness.md
docs/src/users/: quick_start.md
rfcs/: README.md
rfcs/appendices/: APPENDIX-B-default-model-trust-root.md  APPENDIX-C-rfc050-phase4-consent-threat-model.md  APPENDIX-D-rfc050-gui-lifecycle-integration-design.md  APPENDIX-E-rfc050-phase4-compositional-proof-report.md  FINDING-tract-feature-build.md
rfcs/archive/: 026-encrypted-local-indexes.md
rfcs/done/: 000-rfc-lifecycle-policy.md  001-local-data-classification-and-lifecycle.md  002-sqlite-catalog-schema-and-migration-policy.md  003-source-registration-and-file-access-boundary.md  004-file-scanner-and-change-detection.md  005-document-extraction-pipeline.md  006-adaptive-chunking-and-location-metadata.md  007-keyword-search-engine-selection.md  008-embedding-model-and-vector-storage.md  009-hybrid-search-and-rrf-fusion.md  010-optional-local-reranking.md  011-storage-dashboard-and-cleanup-ux.md  012-model-registry-and-installation-workflow.md  013-search-view-and-result-explanation-ux.md  014-japanese-and-mixed-language-search-strategy.md  015-security-hardening-for-local-files-and-local-api.md  016-benchmark-and-retrieval-evaluation-plan.md  017-packaging-and-distribution-strategy.md  018-crash-recovery-diagnostics-and-repair-tools.md  019-test-matrix-and-release-readiness.md  020-documentation-and-user-guidance-structure.md  021-default-embedding-model-selection.md  022-pdf-extraction-backend-selection.md  023-vector-ann-indexing.md  024-vector-quantization.md  025-ocr-pipeline.md  027-gui-framework-finalization.md  028-plugin-extractor-architecture.md  029-model-download-integrity-and-trust-policy.md  030-portable-mode.md  031-gui-internationalization.md  032-design-token-foundation-and-theming.md  033-component-primitive-migration.md  034-accessibility-conformance.md  035-inclusive-design.md  042-search-history-and-reopen.md  046-candle-embedding-backend-status.md  050-trusted-atomic-model-delivery.md
rfcs/handoffs/: HANDOFF-046-candle-backend-removal.md  HANDOFF-047-v1-rc-evidence-collection.md  HANDOFF-048-real-model-performance-recovery.md  HANDOFF-049-portable-runtime-data-isolation.md  HANDOFF-050-trusted-atomic-model-delivery.md  HANDOFF-051-reproducible-reviewed-source-packaging.md  HANDOFF-052-ui-localization-and-design-gate-compliance.md  README.md
rfcs/proposed/: 047-v1-rc-evidence-collection.md  048-real-model-performance-recovery.md  049-portable-runtime-data-isolation.md  050-trusted-atomic-model-delivery.md  051-reproducible-reviewed-source-packaging.md  052-ui-localization-and-design-gate-compliance.md
scripts/: check-rfc-lifecycle.sh  package.sh
