[package]
name = "orbok"
description = "orbok application binary: backend bootstrap and GUI launch"
readme      = "../../README.md"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
categories.workspace    = true
keywords.workspace      = true
repository.workspace    = true

[[bin]]
name = "orbok"
path = "src/main.rs"

[dependencies]
orbok-embed                 = { workspace = true }
orbok-core                  = { workspace = true }
orbok-db                    = { workspace = true }
orbok-fs                    = { workspace = true }
orbok-cache                 = { workspace = true }
orbok-models                = { workspace = true }
orbok-search                = { workspace = true }
orbok-extract               = { workspace = true }
orbok-workers               = { workspace = true }
orbok-ui                    = { workspace = true }

iced                        = { workspace = true }
rfd                         = { workspace = true }
app-json-settings           = { workspace = true }

serde                       = { workspace = true }
serde_json                  = { workspace = true }
tokio                       = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing                     = { workspace = true }
tracing-subscriber          = { workspace = true }

dirs                        = { workspace = true }
futures                     = { workspace = true }
reqwest                     = { workspace = true }
