[package]
name        = "orbok-db"
description = "orbok authoritative SQLite catalog: migrations and repositories (RFC-002)"
readme      = "../../../README.md"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true

[dependencies]
orbok-core                  = { workspace = true }
orbok-models                = { workspace = true }

sha2                        = { workspace = true }
rusqlite                    = { workspace = true }
serde                       = { workspace = true }
serde_json                  = { workspace = true }
tracing                     = { workspace = true }

[dev-dependencies]
tempfile                    = { workspace = true }
