[package]
name        = "orbok-fs"
description = "orbok safe file access boundary, source policy, scanner (RFC-003/RFC-004)"
readme      = "../../../README.md"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true

[dependencies]
orbok-core                  = { workspace = true }
orbok-db                    = { workspace = true }

sha2                        = { workspace = true }
tracing                     = { workspace = true }

[dev-dependencies]
tempfile                    = { workspace = true }
