[package]
name        = "orbok-workers"
description = "orbok pipeline workers: extraction → chunking → keyword indexing (M5/M6)"
readme      = "../../../README.md"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true

[dependencies]
orbok-models                = { workspace = true }
orbok-embed                 = { workspace = true }
orbok-search                = { workspace = true }
orbok-core                  = { workspace = true }
orbok-db                    = { workspace = true }
orbok-fs                    = { workspace = true }
orbok-cache                 = { workspace = true }
orbok-extract               = { workspace = true }

rusqlite                    = { workspace = true }
serde                       = { workspace = true }
serde_json                  = { workspace = true }
sha2                        = { workspace = true }
tracing                     = { workspace = true }

[dev-dependencies]
orbok-bench                 = { path = "../../bench" }

dirs                        = { workspace = true }
tempfile                    = { workspace = true }
zip                         = { workspace = true }
