[package]
name        = "orbok-embed"
description = "orbok embedding backend factory: mock and ONNX (tract) backends (RFC-021)"
readme      = "../../../README.md"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true

[features]
# Enable the tract ONNX runtime backend (pure Rust, no C FFI).
# Required for real embedding inference; adds ~150 MB of compile time.
tract           = ["dep:tract-onnx", "dep:tract-core"]

[dependencies]
orbok-core                  = { workspace = true }
orbok-models                = { workspace = true }

sha2                        = { workspace = true }
tracing                     = { workspace = true }

# Optional heavy inference deps — only compiled with the named feature.
tract-onnx                  = { workspace = true, optional = true }
tract-core                  = { workspace = true, optional = true }

[dev-dependencies]
tempfile                    = { workspace = true }
