[package]
name        = "orbok-models"
description = "orbok local AI model registry types and embedding model trait (RFC-008, RFC-012)"
readme      = "../../../README.md"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true

[dependencies]
orbok-core                  = { workspace = true }

sha2                        = { workspace = true }
serde                       = { workspace = true }

[dev-dependencies]
tempfile                    = { workspace = true }
